# FloatingEye

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
res/: PUIList.xml
src/: AnalogSensorWidget.cpp  AnalogSensorWidget.h  BodyWidget.cpp  BodyWidget.h  CMakeLists.txt  DoubleSensorWidget.h  EmptyWidget.cpp  EmptyWidget.h  EnumSensorWidget.cpp  EnumSensorWidget.h  Grid.cpp  Grid.h  ISS.cpp  ISS.h  IWidget.h  IntSensorWidget.h  MapWidget.cpp  MapWidget.h  Primitives.cpp  Primitives.h  Sensor.h  SensorWidget.cpp  SensorWidget.h  State.cpp  State.h  Vessel.cpp  Vessel.h  VideoStream.cpp  VideoStream.h  main.cpp
tests/: CMakeLists.txt  SensorTest.cpp
